--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
