--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
