--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "tailwindcss": "3.3.3",
