--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/node": "^20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "add": "^2.0.6",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "dialog": "^0.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "init": "^0.1.2",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
@@ -27,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
+    "shadcn-ui": "^0.3.0",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
