--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
+    "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.2.0",
     "@types/node": "^20.5.7",
     "@types/react": "18.2.21",
