--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
-    "next-nprogress-bar": "^2.1.2",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.28",
     "prisma": "^5.3.1",
     "react": "18.2.0",
